--- a/notebooks/day9.ipynb
+++ b/notebooks/day9.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "048f5b4f",
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +26,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2274e64f",
    "metadata": {},
    "source": [
     "data = \"\"\"2199943210\n",
@@ -42,6 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "c4f0971f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "49653d26",
    "metadata": {},
    "outputs": [
     {
@@ -86,6 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
+   "id": "5dadfbb7",
    "metadata": {},
    "outputs": [
     {
@@ -139,6 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "7e0719b2",
    "metadata": {},
    "outputs": [
     {
@@ -159,6 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "62b6a670",
    "metadata": {},
    "outputs": [
     {
@@ -181,6 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "79943599",
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "38641abf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,7 +217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -222,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
