--- a/notebooks/day13.ipynb
+++ b/notebooks/day13.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "a03bc10a",
    "metadata": {},
    "outputs": [
     {
@@ -32,6 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "da542e24",
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "52317971",
    "metadata": {},
    "outputs": [
     {
@@ -130,6 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "437deffd",
    "metadata": {},
    "outputs": [
     {
@@ -167,6 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "0c7c7d2e",
    "metadata": {},
    "outputs": [
     {
@@ -187,6 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "638f89a0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -208,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
