--- a/notebooks/day15.ipynb
+++ b/notebooks/day15.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "b82e294e-e574-4475-ba4c-1ad0f8a8e682",
    "metadata": {},
    "outputs": [
@@ -23,40 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "51635798-0249-4266-ac18-5f73a43a1c66",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IOPub data rate exceeded.\n",
-      "The Jupyter server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--ServerApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "ServerApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "ServerApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2288/1741126411.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[0mto_check\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mto_check\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m     \u001b[0mto_check\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mto_check\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[0mpunt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mto_check\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\ipykernel\\iostream.py\u001b[0m in \u001b[0;36mwrite\u001b[1;34m(self, string)\u001b[0m\n\u001b[0;32m    508\u001b[0m         \"\"\"\n\u001b[0;32m    509\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 510\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    511\u001b[0m             raise TypeError(\n\u001b[0;32m    512\u001b[0m                 \u001b[1;34mf\"write() argument must be str, not {type(string)}\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "462\n",
+      "462\n"
      ]
     }
    ],
    "source": [
+    "# part 1\n",
     "def new_pos(x,y):\n",
     "    pos = [1,-1]\n",
     "    sol = []\n",
@@ -68,25 +51,31 @@
     "    return sol\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "x0, y0 = 0,0\n",
     "xf, yf = 99,99\n",
     "path = set()\n",
     "path.add((0,0))\n",
     "to_check = [(0,x0,y0,path)]\n",
+    "visited = {}\n",
     "\n",
     "while to_check:\n",
-    "    print(to_check)\n",
-    "    to_check = sorted(to_check)\n",
+    "    to_check = sorted(to_check, reverse = True)\n",
     "    punt,x,y,path = to_check.pop()\n",
     "    path = path.copy()\n",
+    "\n",
+    "    if (x,y) in visited:\n",
+    "        if visited[(x,y)] <= punt:\n",
+    "            continue\n",
+    "        else:\n",
+    "            visited[(x,y)] = punt\n",
+    "    else:\n",
+    "        visited[(x,y)] = punt\n",
+    "    \n",
     "    if (x,y) == (xf,yf):\n",
     "        print(punt)\n",
     "        continue\n",
-    "    \n",
+    "        \n",
     "    pos = new_pos(x,y)\n",
-    "    print(pos,)\n",
     "    for p in pos:\n",
     "        if p in path:\n",
     "            continue\n",
@@ -94,33 +83,36 @@
     "        new_p = path.copy()\n",
     "        new_p.add((xi,yi))\n",
     "        to_check.append((punt+data[yi][xi],xi,yi,new_p))\n",
-    "    \n"
+    "    \n",
+    "print(paths[(99,99)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "3f716e00-6a5a-4e61-8ca9-bade67f4e85c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(5, 2), (8, 3)]"
+       "462"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = (8,3)\n",
-    "b = (5,2)\n",
-    "aa = set()\n",
-    "aa.add(a)\n",
-    "aa.add(b)\n",
-    "sorted(aa)"
+    "Data = {}\n",
+    "for n in range(0,9):\n",
+    "    temp = data.copy()\n",
+    "    for x in range(len(data):\n",
+    "        for y in range(len(data)):\n",
+    "            temp[y][x] +=n\n",
+    "            if \n",
+    "                   \n"
    ]
   },
   {
