--- a/notebooks/day14.ipynb
+++ b/notebooks/day14.ipynb
@@ -2,29 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CFFPOHBCVVNPHCNBKVNV\n"
+      "NNCB\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "dict_keys(['KO', 'CV', 'CF', 'FK', 'BN', 'VN', 'BC', 'OP', 'HS', 'HK', 'CC', 'CK', 'OC', 'SN', 'PK', 'BB', 'PO', 'HF', 'BV', 'HP', 'VF', 'BP', 'CH', 'KN', 'NP', 'FS', 'BH', 'VB', 'OS', 'KK', 'SO', 'NB', 'PS', 'KV', 'CS', 'PN', 'HB', 'NF', 'SC', 'NH', 'HV', 'FN', 'KS', 'BO', 'KP', 'OK', 'OV', 'CN', 'SB', 'VP', 'HC', 'FB', 'VS', 'PH', 'VC', 'KH', 'SH', 'BK', 'SP', 'SF', 'OO', 'VH', 'PP', 'FV', 'KC', 'CO', 'NO', 'FO', 'SK', 'ON', 'VO', 'VV', 'CP', 'FC', 'FP', 'FH', 'KF', 'PB', 'NN', 'SS', 'CB', 'HH', 'FF', 'KB', 'HO', 'BF', 'PV', 'OB', 'OH', 'VK', 'NV', 'SV', 'NC', 'OF', 'NS', 'PF', 'HN', 'BS', 'NK', 'PC'])"
+       "dict_keys(['CH', 'HH', 'CB', 'NH', 'HB', 'HC', 'HN', 'NN', 'BH', 'NC', 'NB', 'BN', 'BB', 'BC', 'CC', 'CN'])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = open(\"../data/data_day14.txt\", \"r\")\n",
+    "f = open(\"../data/test_day14.txt\", \"r\")\n",
     "data = [line.strip() for line in list(f)]\n",
     "real_template = data.pop(0)\n",
     "print(real_template)\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2947\n"
+      "1588\n"
      ]
     }
    ],
@@ -79,204 +79,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \n",
-      "V 4  K 1   \n",
-      "CPFSFNPFONHVBHCHVHVKNFPCHPCCNOBNKOVKNHV\n",
-      " \n",
-      "H 6  S 1   \n",
-      "CPPNFFSBFVNFPNFKOKNNHKVPBBHPCCHKVKHKVVKONPFNPOCCHFPOCFCCNOOBBPNHKFOPVVKONNHKV\n",
-      " \n",
-      "N 11  S 1   \n",
-      "CPPCPONPFSFFSHBNFPVKNPFNPONPFBKFOBKONKNNHNKOVCPCBSBBHFPOCFCCHNKOVVKBHNKOVHVVKFOKNFPNFVNFPFOSCFCCHKFN\n",
-      " \n",
-      "N 23  S 7   \n",
-      "CPPCPOCPPFOKNFPNFFSBFSFFSBHVBPNPFNPKVVKONFPNFVNFPFOKNFPNFFBNKFFKOBBNKFOKNHKONKNNHKNHKFOPVHCPPOCCBSSH\n",
-      " \n",
-      "F 50  S 19   \n",
-      "CPPCPOCPPFOSCPPCPNFKOBKONPFNPONPFSFFSHBNFFSBFSFFSHBBHKVPBHPONFPNFVNFPHKOVHVVKFOKNPFNPONPFPVKNPFNPNFK\n",
-      " \n",
-      "F 98  C 31   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOBBNKFOKNFPNFVNFPFOKNFPNFFSBFSFFSBHVBPNPFSFFSHBNFFSBFSFFSBHV\n",
-      " \n",
-      "F 209  C 49   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOBBSBPNHKFFKOBKONPFN\n",
-      " \n",
-      "F 428  C 87   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 872  C 159   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 1751  C 297   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 3535  C 588   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 7051  C 1167   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 14204  C 2359   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 28373  V 4748   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 56910  V 9276   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 113816  V 18359   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 227956  V 36230   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 455687  V 72086   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n",
-      " \n",
-      "F 912460  V 143164   \n",
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPC\n"
+      "CFFPOHBCVVNPHCNBKVNV\n",
+      "{'KO': 0, 'CV': 1, 'CF': 1, 'FK': 0, 'BN': 0, 'VN': 2, 'BC': 1, 'OP': 0, 'HS': 0, 'HK': 0, 'CC': 0, 'CK': 0, 'OC': 0, 'SN': 0, 'PK': 0, 'BB': 0, 'PO': 1, 'HF': 0, 'BV': 0, 'HP': 0, 'VF': 0, 'BP': 0, 'CH': 0, 'KN': 0, 'NP': 1, 'FS': 0, 'BH': 0, 'VB': 0, 'OS': 0, 'KK': 0, 'SO': 0, 'NB': 1, 'PS': 0, 'KV': 1, 'CS': 0, 'PN': 0, 'HB': 1, 'NF': 0, 'SC': 0, 'NH': 0, 'HV': 0, 'FN': 0, 'KS': 0, 'BO': 0, 'KP': 0, 'OK': 0, 'OV': 0, 'CN': 1, 'SB': 0, 'VP': 0, 'HC': 1, 'FB': 0, 'VS': 0, 'PH': 1, 'VC': 0, 'KH': 0, 'SH': 0, 'BK': 1, 'SP': 0, 'SF': 0, 'OO': 0, 'VH': 0, 'PP': 0, 'FV': 0, 'KC': 0, 'CO': 0, 'NO': 0, 'FO': 0, 'SK': 0, 'ON': 0, 'VO': 0, 'VV': 1, 'CP': 0, 'FC': 0, 'FP': 1, 'FH': 0, 'KF': 0, 'PB': 0, 'NN': 0, 'SS': 0, 'CB': 0, 'HH': 0, 'FF': 1, 'KB': 0, 'HO': 0, 'BF': 0, 'PV': 0, 'OB': 0, 'OH': 1, 'VK': 0, 'NV': 1, 'SV': 0, 'NC': 0, 'OF': 0, 'NS': 0, 'PF': 0, 'HN': 0, 'BS': 0, 'NK': 0, 'PC': 0}\n",
+      "{'KO': 'F', 'CV': 'H', 'CF': 'P', 'FK': 'B', 'BN': 'P', 'VN': 'K', 'BC': 'H', 'OP': 'S', 'HS': 'V', 'HK': 'N', 'CC': 'F', 'CK': 'V', 'OC': 'S', 'SN': 'C', 'PK': 'H', 'BB': 'S', 'PO': 'F', 'HF': 'K', 'BV': 'P', 'HP': 'F', 'VF': 'H', 'BP': 'H', 'CH': 'C', 'KN': 'O', 'NP': 'F', 'FS': 'F', 'BH': 'B', 'VB': 'P', 'OS': 'S', 'KK': 'O', 'SO': 'P', 'NB': 'O', 'PS': 'O', 'KV': 'O', 'CS': 'P', 'PN': 'O', 'HB': 'V', 'NF': 'P', 'SC': 'S', 'NH': 'N', 'HV': 'K', 'FN': 'V', 'KS': 'P', 'BO': 'C', 'KP': 'V', 'OK': 'B', 'OV': 'P', 'CN': 'C', 'SB': 'H', 'VP': 'C', 'HC': 'P', 'FB': 'F', 'VS': 'K', 'PH': 'C', 'VC': 'H', 'KH': 'B', 'SH': 'B', 'BK': 'N', 'SP': 'P', 'SF': 'B', 'OO': 'B', 'VH': 'K', 'PP': 'C', 'FV': 'P', 'KC': 'P', 'CO': 'S', 'NO': 'O', 'FO': 'K', 'SK': 'O', 'ON': 'K', 'VO': 'H', 'VV': 'H', 'CP': 'P', 'FC': 'B', 'FP': 'N', 'FH': 'C', 'KF': 'F', 'PB': 'C', 'NN': 'K', 'SS': 'O', 'CB': 'C', 'HH': 'S', 'FF': 'S', 'KB': 'N', 'HO': 'O', 'BF': 'N', 'PV': 'K', 'OB': 'B', 'OH': 'N', 'VK': 'V', 'NV': 'H', 'SV': 'F', 'NC': 'P', 'OF': 'V', 'NS': 'V', 'PF': 'N', 'HN': 'K', 'BS': 'S', 'NK': 'H', 'PC': 'O'}\n"
      ]
     }
    ],
    "source": [
     "# part 2\n",
     "\n",
-    "template = real_template\n",
-    "for _ in range(19):\n",
-    "    new_t = ''\n",
-    "    prueba = ''\n",
-    "    for l in range(0,len(template)-1):\n",
-    "        to_find = template[l:l+2]\n",
-    "        new_t += template[l]\n",
-    "        if to_find in D:\n",
-    "            new_t += D[to_find]\n",
+    "f = open(\"../data/data_day14.txt\", \"r\")\n",
+    "data = [line.strip() for line in list(f)]\n",
+    "real_template = data.pop(0)\n",
+    "print(real_template)\n",
+    "data.pop(0)\n",
+    "data = [line.split(' -> ')for line in data]\n",
+    "D = {}\n",
+    "for line in data:\n",
+    "    D[line[0]] = line[1]\n",
+    "    \n",
+    "Entities = {}\n",
+    "for k in D.keys():\n",
+    "    Entities[k] = 0\n",
+    "for n in range(len(real_template)-1):\n",
+    "    Entities[real_template[n:n+2]] += 1 \n",
+    "print(Entities)\n",
+    "print(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3232426226464\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for _ in range(40):\n",
+    "    new_Ent = Entities.copy()\n",
+    "    #print(new_Ent)\n",
+    "    for ent in Entities:\n",
+    "        new_l = D[ent]\n",
+    "        new_Ent[ent[0]+new_l] += Entities[ent]\n",
+    "        new_Ent[new_l+ent[-1]] += Entities[ent]\n",
+    "        new_Ent[ent] -= Entities[ent]\n",
+    "    Entities = new_Ent.copy()\n",
+    "     \n",
+    "    \n",
+    "Sol = {}\n",
+    "for ent in Entities:\n",
+    "    for l in ent:\n",
+    "        if l not in Sol:\n",
+    "            Sol[l] = 0\n",
+    "    for l in ent:\n",
+    "        Sol[l] += Entities[ent]\n",
+    "Sol[real_template[0]] += 1\n",
+    "Sol[real_template[-1]] += 1\n",
     "        \n",
-    "            prueba+=D[to_find]\n",
-    "            \n",
-    "    new_t+=template[-1]\n",
+    "for ent in Sol:\n",
+    "    Sol[ent] = Sol[ent]//2 \n",
+    "\n",
     "    \n",
-    "    counter = 0\n",
-    "    for i in range(len(template)):\n",
-    "        if template[i] == new_t[i]:\n",
-    "            counter += 1\n",
+    "M = 0\n",
+    "m = 10**10000\n",
     "    \n",
-    "    high = 0\n",
-    "    a_h = ''\n",
-    "    low = 10000000000\n",
-    "    a_l = ''\n",
-    "    for l in set(template):\n",
-    "        temp = template.count(l)\n",
-    "        if temp > high: \n",
-    "            high = temp\n",
-    "            a_h = l\n",
-    "        if temp < low:\n",
-    "            low = temp\n",
-    "            a_l = l\n",
-    "        #print(l,temp,' ',end='')\n",
-    "    print(' ')\n",
-    "    print(a_h,template.count(a_h),' ',end='')\n",
-    "    print(a_l,template.count(a_l),' ',end='')\n",
-    "    print(' ')\n",
-    "    #print(counter, len(new_t), new_t.count('P'))\n",
+    "for ent in Sol:\n",
+    "    if Sol[ent] > M:\n",
+    "        M = Sol[ent]\n",
+    "    if Sol[ent] < m:\n",
+    "        m = Sol[ent]\n",
+    "print(M-m)\n",
     "    \n",
     "    \n",
-    "    template = new_t\n",
-    "    #print('prueba ',prueba[0:150])\n",
-    "    print(template[:100])\n",
+    "    \n",
+    "    \n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 200 CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPNFKOBKONPFNPONPFSFFBPNHKFFSFBKFOSSOSPOSSPPFOSSOSPPFOSSOSPOSSOSSCPPCPOCP\n",
-      "768 200 CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPNFKOBKONPFNPONPFSFFBPNHKFFSFBKFOSSOSPOSSPPFOSSOSPPFOSSOSPOSSOSSCPPCPOCP\n",
-      "11520 200 CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPNFKOBKONPFNPONPFSFFBPNHKFFSFBKFOSSOSPOSSPPFOSSOSPPFOSSOSPOSSOSSCPPCPOCP\n",
-      "26624 200 CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPNFKOBKONPFNPONPFSFFBPNHKFFSFBKFOSSOSPOSSPPFOSSOSPPFOSSOSPOSSOSSCPPCPOCP\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = 200\n",
-    "a = template[:n]\n",
-    "for x in range(len(template)):\n",
-    "    if template[x:x+n] == a:\n",
-    "        print(x,len(template[x:x+n]),template[x:x+n])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19457"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(template)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPFOKNFPNFFBNKFFKOSSOSPOSSPOSSOSSCPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPNFKOBKONPFNPONPFSFFBPNHKFFSFBKFOSSOSPOSSPPFOSSOSPPFOSSOSPOSSOSSCPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKF\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(template[768:1000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPPCPOCPPFOSCPPCPNFKOSSSCPPCPOCPPONPFBKFOSSOSOSSCPPCPOCPPFOSCPPCPONPFBKFOBBNKFOKNFPNFVNFPFOKNFPNFFSBFSFFBHPONNHNKFFSFFSBFFBNKFFKOSSOSPOSSPPFOSSOSPPCPNFKOSSOSPOSSPPCPNFKOSSOSPOSSPPFOSSOSPOSSOSS\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(template[192:192*2])"
    ]
   },
   {
